# WWT-Hackathon-AI-Models

./: .gitignore  README.md  pyproject.toml
Fact-Checker/: fact-check.py
Phishing-Detector/: test.py
Phishing-Detector/Bert-Model/: bert-load.py  bert-run.py  test-gpu.py
Phishing-Detector/Bert-Model/trained_model/: config.json
src/wwt_stuff/: index.html  json_streaming_response.py  main.py
src/wwt_stuff/fact_checker/: fact_check.py
src/wwt_stuff/phishing_detector/: test.py
src/wwt_stuff/phishing_detector/bert_model/: bert_load.py  bert_run.py  test_gpu.py
test/: bert_test.py
