[project]
dependencies = [
    "beautifulsoup4>=4.13.3",
    "blobfile>=3.0.0",
    "datasets>=3.2.0",
    "httpx>=0.28.1",
    "pandas-stubs>=2.2.3.241126",
    "protobuf>=5.29.3",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "scipy-stubs>=1.15.1.0",
    "sentence-transformers>=3.4.1",
    "tiktoken>=0.8.0",
    "torch>=2.6.0",
    "transformers[torch]>=4.48.3",
    "trio>=0.28.0",
]
description = "WWT loves ML"
name = "wwt-stuff"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[dependency-groups]
dev = [
    "basedpyright>=1.27.0",
    "ruff>=0.9.6",
]

[tool.ruff]
preview = true
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "COM812",
    "CPY001",
    "D",
    "D212",
    "D400",
    "D404",
    "D415",
    "D417",
    "DOC",
    "E203",
    "E501",
    "ISC001",
    "S101",
    "S311",
    "T201",
    "TD003",
]
preview = true # enables pylint rules
select = [
    "ALL",
    "D212",
    "D404",
    "D415",
    "D417",
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.basedpyright]
typeCheckingMode = "basic"
